Solution for exercise 2 and extra credit

--- a/react-fundamentals/src/exercise/02.html
+++ b/react-fundamentals/src/exercise/02.html
@@ -2,6 +2,8 @@
 <!-- http://localhost:3000/isolated/exercise/02.html -->
 
 <body>
+  <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <div id="root"></div>
 
   <!-- 🐨 add React and ReactDOM on the page.
@@ -13,17 +15,31 @@
   <script type="module">
     const rootElement = document.getElementById('root')
 
-    // You're going to re-implement this code using React!
-    // 💣 So go ahead and delete this implementation (or comment it out for now)
-    // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
-    // This is similar to ReactDOM.createRoot().render()
-    rootElement.append(element)
+    // // You're going to re-implement this code using React!
+    // // 💣 So go ahead and delete this implementation (or comment it out for now)
+    // // These three lines are similar to React.createElement
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // // This is similar to ReactDOM.createRoot().render()
+    // rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
     // 💰 The example in the markdown file should be a good hint for you.
+
+    const elementProps = {className: 'container' }
+    const elementType = 'div'
+    // Can define props beforehand as variables and put into createElement
+    const divElement = React.createElement(elementType, elementProps)
+    // Can also define props anonymously and add them in using nested children
+    const helloWorld = React.createElement('span', {children: [
+        React.createElement('span', null, 'Hello'),
+        ' ',
+        React.createElement('span', null, 'World'),
+      ]})
+
+    // Use ReactDOM.createRoot() instead of ReactDOM.render()
+    ReactDOM.createRoot(rootElement).render([divElement, helloWorld])
   </script>
 </body>
